--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     url: jdbc:oracle:thin:@localhost:1521/XE
-    username: ORADB2
-    password: oracle123
+    username: ${username}
+    password: ${password}
     driver:
       class: oracle.jdbc.driver.OracleDriver
   jpa:
